--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-tignore file for Xcode4 / OS X Source projects
+#########################
+# .gitignore file for Xcode4 / OS X Source projects
 #
 # Version 2.0
 #    For latest version, see: http://stackoverflow.com/questions/49478/git-ignore-file-for-xcode-projects
